root/defaults/iptables/rules.v4
# Generated by iptables-save v1.6.1 on Wed May 19 01:02:19 2021
*mangle
:PREROUTING ACCEPT [5:1096]
:INPUT ACCEPT [5:1096]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2:112]
:POSTROUTING ACCEPT [2:112]
:V2RAY - [0:0]
:V2RAY_SELF - [0:0]
-A PREROUTING -j V2RAY
-A OUTPUT -j V2RAY_SELF
-A V2RAY -d 10.0.0.0/8 -j RETURN
-A V2RAY -d 100.64.0.0/10 -j RETURN
-A V2RAY -d 127.0.0.0/8 -j RETURN
-A V2RAY -d 169.254.0.0/16 -j RETURN
-A V2RAY -d 172.16.0.0/12 -j RETURN
-A V2RAY -d 192.0.0.0/24 -j RETURN
-A V2RAY -d 224.0.0.0/4 -j RETURN
-A V2RAY -d 240.0.0.0/4 -j RETURN
-A V2RAY -d 255.255.255.255/32 -j RETURN
-A V2RAY -d 192.168.0.0/16 -j RETURN
-A V2RAY -p tcp -j TPROXY --on-port 12345 --on-ip 0.0.0.0 --tproxy-mark 0x1/0xffffffff
-A V2RAY -p udp -j TPROXY --on-port 12345 --on-ip 0.0.0.0 --tproxy-mark 0x1/0xffffffff
-A V2RAY_SELF -d 10.0.0.0/8 -j RETURN
-A V2RAY_SELF -d 100.64.0.0/10 -j RETURN
-A V2RAY_SELF -d 127.0.0.0/8 -j RETURN
-A V2RAY_SELF -d 169.254.0.0/16 -j RETURN
-A V2RAY_SELF -d 172.16.0.0/12 -j RETURN
-A V2RAY_SELF -d 192.0.0.0/24 -j RETURN
-A V2RAY_SELF -d 224.0.0.0/4 -j RETURN
-A V2RAY_SELF -d 240.0.0.0/4 -j RETURN
-A V2RAY_SELF -d 255.255.255.255/32 -j RETURN
-A V2RAY_SELF -d 192.168.0.0/16 -j RETURN
-A V2RAY_SELF -m mark --mark 0xff -j RETURN
-A V2RAY_SELF -p tcp -j MARK --set-xmark 0x1/0xffffffff
-A V2RAY_SELF -p udp -j MARK --set-xmark 0x1/0xffffffff
COMMIT
# Completed on Wed May 19 01:02:19 2021
